# equity-screener

./: .gitignore  .pre-commit-config.yaml  .vercelignore  Makefile  README.md  ah-screening-report-latest.json  pyproject.toml  us-premarket-latest.json  vercel.json
data/: custom_tags.example.csv  industry_mapping.example.csv  us_china_concept.seed.csv  us_concept_boards.seed.csv
docs/: a-share-overseas-commodity-etf-lof.md  deployment.md  master-plan.md  potential-stock-scanner.md  project-overview.md  refactor-plan.md  report-schema.md  technical-solution.md  todo.md  us-screener-data.md  value-ratehike-profile.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
reports/: a-share-etf-final-pool-2026-05-27.md  a-share-etf-report-2026-05-27.md  ah-screening-appendix-2026-05-25.md  ah-screening-appendix-2026-05-26.md  ah-screening-appendix-2026-05-27.md  ah-screening-appendix-2026-05-28.md  ah-screening-appendix-2026-05-29.md  ah-screening-appendix-2026-05-30.md  ah-screening-appendix-2026-05-31.md  ah-screening-appendix-2026-06-01.md  ah-screening-appendix-2026-06-02.md  ah-screening-appendix-2026-06-05.md  ah-screening-appendix-2026-06-06.md  ah-screening-appendix-2026-06-07.md  ah-screening-appendix-2026-06-08.md  ah-screening-appendix-2026-06-09.md  ah-screening-appendix-2026-06-10.md  ah-screening-appendix-2026-06-11.md  ah-screening-appendix-2026-06-12.md  ah-screening-appendix-2026-06-13.md  ah-screening-appendix-2026-06-14.md  ah-screening-appendix-2026-06-15.md  ah-screening-appendix-2026-06-16.md  (+61 more)
tests/: test_storage.py  (+28 more)
(+113 files in other folders)
