[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ah-stock-screener"
version = "0.1.0"
description = "Free-data A-share and Hong Kong stock screening toolkit"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "akshare>=1.16.0,<2",
  "beautifulsoup4>=4.12.0,<5",
  "duckdb>=1.1.0,<2",
  "lxml>=5.0.0,<7",
  "pandas>=2.2.0,<3",
  "pypdf>=5.0.0,<7",
  "requests>=2.31.0,<3",
  "rich>=13.7.0,<15",
  "tabulate>=0.9.0,<1",
  "typer>=0.12.0,<0.20",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0,<5",
  "ruff>=0.8.0,<1",
]
pdf = [
  "pdfplumber>=0.11.0,<1",
]
ui = [
  "streamlit==1.51.0",
]

[project.scripts]
ah-screener = "ah_screener.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
